[gd_scene load_steps=9 format=3 uid="uid://dvxbj0rupkplb"]

[ext_resource type="Script" path="res://Mobs/square.gd" id="1_8x6pb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lt2qj"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="4"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.241484, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.01, 0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="3"]
resource_name = "Hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1.68179, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jsd6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lb64"]
_data = {
"Death": SubResource("4"),
"Hit": SubResource("3"),
"RESET": SubResource("Animation_jsd6h")
}

[sub_resource type="Animation" id="Animation_3nnal"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbib5"]
_data = {
"Hit": SubResource("Animation_3nnal")
}

[node name="square" type="CharacterBody2D"]
z_index = 10
collision_layer = 128
collision_mask = 14
floor_snap_length = 16.0
script = ExtResource("1_8x6pb")

[node name="Physics Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lt2qj")

[node name="Sprite" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Sprite"]
color = Color(0.964706, 0.556863, 0.298039, 1)
polygon = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_1lb64")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_lbib5")
}

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
scale = Vector2(1.2, 1.2)
polygon = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
scale = Vector2(1.2, 1.2)
polygon = PackedVector2Array(-13.3333, -13.3333, 13.3333, -13.3333, 13.3333, 13.3333, -13.3333, 13.3333)

[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
